<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/edLyrics"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnAdd"
        android:gravity="top" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/edNameSong"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name_input"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lyrics_enter"
        android:id="@+id/textView2"
        android:textSize="25sp"
        android:layout_below="@+id/edNameSong"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/btnAdd"
        android:onClick="onClickDB"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_group"
        android:id="@+id/btn_add_performer"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btnAdd"
        android:layout_toStartOf="@+id/btnAdd"
        android:onClick="onClickDB"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="New Text"
        android:id="@+id/pre_add_group_name"
        android:layout_below="@+id/edLyrics"
        android:layout_toRightOf="@+id/btnAdd"
        android:layout_toEndOf="@+id/btnAdd" />

</RelativeLayout>