<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_group_name"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_performer_name"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:id="@+id/Save"
        android:layout_below="@+id/radio_performer_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_group_name"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add performer"
        android:id="@+id/btn_add_performer"
        android:layout_alignTop="@+id/Save"
        android:layout_toRightOf="@+id/Save"
        android:layout_toEndOf="@+id/Save"
        android:enabled="false" />
    <ListView
        android:id="@+id/lv_performers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_add_performer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone">
    </ListView>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_group_name"
        android:id="@+id/radio_performer_type">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solo"
            android:id="@+id/radio_solo"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:id="@+id/radio_group" />

    </RadioGroup>
</RelativeLayout>