<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <RadioGroup
            android:id="@+id/radGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/performer"
                android:checked="true"
                android:id="@+id/radioPerformer" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song"
                android:id="@+id/radioSong" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:id="@+id/radioGenre" />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:id="@+id/btnSearch"
            android:layout_marginLeft="21dp"
            android:layout_gravity="center_vertical"
            android:onClick="onClick"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchField"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:singleLine="false"
        android:hint="@string/searchfield" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchField">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show list of performers"
            android:id="@+id/btnAuthor"
            android:onClick="onClick"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show list of songs"
            android:id="@+id/btnSongs"
            android:onClick="onClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add new song"
            android:id="@+id/btnAdd"
            android:onClick="onClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Chords"
            android:id="@+id/btnChords"
            android:onClick="onClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Debug button"
            android:id="@+id/btnDebug"
            android:onClick="onClick"/>
    </TableLayout>

</RelativeLayout>
